# slap

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  create.rs  main.rs  open.rs
