[package]
name = "slap"
version = "0.1.0"
edition = "2024"
description = "Create files and directories with ease - touch, but slappier"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
open = "5"
